--- a/Mutant Year Zero/mutantyearzero.htm
+++ b/Mutant Year Zero/mutantyearzero.htm
@@ -2,10 +2,12 @@
 <input class="tab" type="hidden" name="attr_tab" value="character">
 
 <!--tabs-->
-<button title="Character" name="act_tab_character" type="action">character</button>
-<button title="Ark" name="act_tab_ark" type="action">ark</button>
-<button title="Log" name="act_tab_log" type="action">log</button>
-<img alt="Mutant Year Zero" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/logo.png">
+<div class="grid-tabs">
+    <button title="Character" name="act_tab_character" type="action">character</button>
+    <button title="Ark" name="act_tab_ark" type="action">ark</button>
+    <button title="Log" name="act_tab_log" type="action">log</button>
+    <img alt="Mutant Year Zero" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/logo.jpg">
+</div>
 
 <div class="wrapper tab-content character">
     <div class="box character-details">
@@ -13,17 +15,22 @@
             <span class="label" data-i18n="name">Name</span>
             <input class="input" type="text" name="attr_character_name" value="" title="@{character_name}" />
             <span class="label" data-i18n="role">Role</span>
-            <input class="input" type="text" name="attr_role" value="" title="@{role}" />               
+            <input class="input" type="text" name="attr_role" value="" title="@{role}" />              
         </div>
     </div>
     <div class="character-row">
         <div class="two-col-left">
             <div class="grid 2grid">
                 <div class="box character-attributes">
+                    <div class="grid attributes-grid header">
+                        <h1 data-i18n="attribute-u">ATTRIBUTES</h1>
+                        <h2 data-i18n="max-abbr">Max</h2>
+                        <h2 data-i18n="attr">Attr</h2>
+                        <h2 data-i18n="trauma">Trauma</h2>
+                    </div>
                     <div class="grid attributes-grid">
-                        <div class="attributes-box-header header"><h1 data-i18n="attribute-u">ATTRIBUTES</h1></div>
                         <!--- STRENGTH & DAMAGE -->
-                        <h2 data-i18n="strength">Strength</h2>
+                        <h3 data-i18n="strength">Strength</h3>
                         <input class="input-number" type="number" name="attr_strength_max" value="0" min="0" title="@{strength_max}" />
                         <input class="input-number" type="text" name="attr_strength" value="0" title="@{strength}" readonly />
                         <div class="wounds-grid">
@@ -39,8 +46,8 @@
                             </div>
                         </div>
                          <!--- AGILITY & FATIGUE -->
-                        <h2 data-i18n="agility">Agility</h2>
-                        <input class="input-number" type="number" name="attr_agility_max" value="0" min="0" title="@{agility}" />
+                        <h3 data-i18n="agility">Agility</h3>
+                        <input class="input-number" type="number" name="attr_agility_max" value="0" min="0" title="@{agility_max}" />
                         <input class="input-number" type="text" name="attr_agility" value="0" title="@{agility}" readonly />
                         <div class="wounds-grid">
                             <h3 data-i18n="fatigue">Fatigue</h3>
@@ -55,8 +62,8 @@
                             </div>
                         </div>
                          <!--- WITS & CONFUSION -->
-                        <h2 data-i18n="wits">Wits</h2>
-                        <input class="input-number" type="number" name="attr_wits_max" value="0" min="0" title="@{wits}" />
+                        <h3 data-i18n="wits">Wits</h3>
+                        <input class="input-number" type="number" name="attr_wits_max" value="0" min="0" title="@{wits_max}" />
                         <input class="input-number" type="text" name="attr_wits" value="0" title="@{wits}" readonly />
                         <div class="wounds-grid">
                             <h3 data-i18n="confusion">Confusion</h3>
@@ -71,8 +78,8 @@
                             </div>
                         </div>
                         <!--- EMPATHY & DOUBT -->
-                        <h2 data-i18n="empathy">Empathy</h2>
-                        <input class="input-number" type="number" name="attr_empathy_max" value="0" min="0" title="@{empathy}" />
+                        <h3 data-i18n="empathy">Empathy</h3>
+                        <input class="input-number" type="number" name="attr_empathy_max" value="0" min="0" title="@{empathy_max}" />
                         <input class="input-number" type="text" name="attr_empathy" value="0" title="@{empathy}" readonly /> 
                         <div class="wounds-grid">
                             <h3 data-i18n="doubt">Doubt</h3>
@@ -286,14 +293,14 @@
                             <input name="attr_gear_roll" type="hidden" value="" />
                             <button class="dice-pool" type="roll" name="roll_the_dice" value="&{template:rolls} {{character_name=@{character_name}}} {{character_id=@{character_id}}} {{name=^{dice-pool}}} {{subtitle=@{current_preset}}} {{free-text}} {{footer}} @{base_roll} @{skill_roll} @{gear_roll} @{include_with_roll}" data-i18n-title="roll-dice" title="Roll the Dice!"><span class="small-caps" data-i18n="roll"> Roll </span></button>
                         </div>
-                    <!--    <div class="grid-item template-roll">
-                            <button class="dice-pool" type="roll" name="roll_a_push" value="&{template:rolls} {{character_name=@{character_name}}} {{character_id=@{character_id}}} {{name=^{pushes-the-roll}}} {{subtitle=@{current_preset}}} {{free-text}} {{footer}} @{base_roll} @{skill_roll} @{gear_roll} {{push-query=?{Did You Adjust the Dice Pool?|Yes ~ Of Course I Did.,The Pool of Dice was Adjusted.|No ~ I didn't ~ I need to Cancel this Roll.,The Pool of Dice was Not Adjusted.} }} @{include_with_roll}" data-i18n-title="push-dice" title="Push the Dice!"><span class="small-caps" data-i18n="push"> Push </span></button>
-                        </div>-->
                         <div class="grid-item">
                             <button class="dice-pool" type="roll" name="roll_d66" value="&{template:rolls} {{character_name=@{character_name}}} {{character_id=@{character_id}}} {{name=D66 Roll}} {{subtitle}} {{free-text}} {{other1=[[1d6cs0cf0]]}},{{other2=[[1d6cs0cf0]]}}{{footer}}" data-i18n-title="roll-dice-66" title="Roll d66!"><span class="small-caps"> D</span>66 </button>
                         </div>
                         <div class="grid-item">
                             <button class="dice-pool" type="roll" name="roll_d66" value="&{template:rolls} {{character_name=@{character_name}}} {{character_id=@{character_id}}} {{name=D66 Roll}} {{subtitle}} {{free-text}} {{other1=[[1d6cs0cf0]]}},{{other2=[[1d6cs0cf0]]}},{{other3=[[1d6cs0cf0]]}} {{footer}}" data-i18n-title="roll-dice-666" title="Roll d66!"><span class="small-caps"> D</span>666 </button>
+                        </div>
+                        <div class="grid-item init-item">
+                            <button class="dice-pool" data-i18n="initiative" data-i18n-title="initiative" type="roll" name="roll_init" value="&{template:rolls} {{character_name=@{character_name}}} {{character_id=@{character_id}}} {{name=Initiative}} {{subtitle=Agility (@{agility})}} {{free-text}} {{other1=[[1d6cs1]]}} {{footer}}" title="Initiative">Initiative</button>
                         </div>
                     </div>
                 </div> 
@@ -384,6 +391,7 @@
                         <input name="attr_rot_roll" type="hidden" value="" />
                         <div class="rot-box header"><h1 data-i18n="rot-p">ROT POINTS</h1></div>
                         <div class="dots">
+                            <input type="hidden" name="attr_rot_permenant"/>
                             <input name="attr_rot" type="radio" value="0" checked /><span>0</span>
                             <input name="attr_rot" type="radio" value="1"/><span>1</span>
                             <input name="attr_rot" type="radio" value="2"/><span>2</span>
@@ -494,8 +502,8 @@
                     <div class="grid injuries-grid">
                         <div class="injuries-box">
                             <fieldset class="repeating_injuries">
-                                <button class="toggles toggles-repeating" name="act_settings" type="action">y</button>
                                 <input class="display" name="attr_reveal" type="hidden" value="display,settings," />
+                                <button class="toggles toggles-repeating" name="act_settings" type="action">y</button>
                                 <div class="display">
                                     <span name="attr_injury_name"></span>
                                     <span name="attr_injury_display"></span>
@@ -754,7 +762,7 @@
         <div class="box grid ark-other-grid">
             <h1 data-i18n="other-info">Other Information</h1>
             <span class="label" data-i18n="population">Population</span>
-            <input class="input-number" type="text" name="attr_ark_population" value="" title="@{ark_population}" />
+            <input class="input-number" type="number" name="attr_ark_population" value="" title="@{ark_population}" />
             <hr />
             <span class="label" data-i18n="water-source">Water Source</span>
             <input class="input-number" type="text" name="attr_ark_water_source" value="" title="@{ark_water_source}" />
@@ -1148,7 +1156,7 @@ on("change:armor1_equiped change:armor1_damage change:armor1_bonus change:armor2
             const stat = parseInt(v[attributes[attribute]], 10) || 0;
             translationKey = getTranslationByKey(attribute);
             const update = {
-                base        : (stat > 0) ? stat : 0,
+                base             : (stat > 0) ? stat : 0,
                 skill            : parseInt(v[`${attribute}`], 10) || 0,
                 current_preset   : translationKey,
                 include_with_roll: ""
@@ -1164,12 +1172,14 @@ on("change:armor1_equiped change:armor1_damage change:armor1_bonus change:armor2
             const attribute      = v[`${source}_attribute`];
             getAttrs([attribute, `${source}_name`, `${source}_skill`], (v) => {
                 const stat = parseInt(v[`${attribute}`], 10) || 0;
-                setAttrs({
-                    attribute: (stat > 0) ? stat : 0,
-                    skill: parseInt(v[`${source}_skill`], 10) || 0,
-                    current_preset: v[`${source}_name`],
+                const update = {
+                    base             : (stat > 0) ? stat : 0,
+                    skill            : parseInt(v[`${source}_skill`], 10) || 0,
+                    current_preset   : v[`${source}_name`],
                     include_with_roll: ""
-                });
+                };
+
+                setAttributes(update, false);
             });
         });
     });
