uncommenting buttons, adding additional logic

--- a/Starfinder by Roll20/Starfinder.html
+++ b/Starfinder by Roll20/Starfinder.html
@@ -217,7 +217,7 @@
                 <textarea class='buff-stack input-field' title='@{half_specializations}' name='attr_half_specializations'>operative,small_arm</textarea>
                 <div class='gutter'></div>
             </div>
-        </div><!--
+        </div>
         <div class='section-container mancer-container'>
             <div class='section'>
                 <h1 class='label' data-i18n='charactermancers'>CHARACTERMANCERS</h1>
@@ -19676,7 +19676,7 @@ Charmancer overall slide template
             TAS.log(event);
             const data = getMancerData(event.data),
                 cloneRepAttr = JSON.parse(JSON.stringify(repeatingAttributes)),
-                setObj = {},
+                setObj = {sheet_type:'pc',tab_select:0},
                 buffs = parseBuffs(data.mancerData);
                 
             TAS.log(data);
@@ -19886,12 +19886,17 @@ Charmancer overall slide template
                     //Envoy conversions
                     ['EXPERTISE TALENTS']:[[],{category:'EXPERTISE TALENTS'}],['SKILL EXPERTISE SELECTIONS']:[[],{category:'SKILL EXPERTISE SELECTIONS'}],IMPROVISATIONS:[[],{category:'IMPROVISATIONS'}],
                     //Soldier conversions
+                    ['FIGHTING STYLES']:[[],{category:'FIGHTING STYLES'}],['GEAR BOOSTS']:[[],{category:'GEAR BOOSTS'}],
                     //technomancer conversions
+                    ['MAGIC HACKS']:[[],{category:'MAGIC HACKS'}],
                     //mystic conversions
                     ['CONNECTIONS']:[[],{category:'CONNECTIONS'}],
                     //solarian conversions
+                    ['REVELATIONS']:[[],{category:'REVELATIONS'}],
                     //mechanic conversions
+                    ['TRICKS']:[[],{category:'TRICKS'}],
                     //operative conversions
+                    ['SPECIALIZATIONS']:[[],{category:'SPECIALIZATIONS'}],['EXPLOITS']:[[],{category:'EXPLOITS'}]
                 });
                 
             if(!list_converter.SKILLS[0][0]){
@@ -19906,7 +19911,14 @@ Charmancer overall slide template
                 const blob_type_converter = {
                     improvisation:'IMPROVISATIONS',
                     [`expertise talent`]:'EXPERTISE TALENTS',
-                    connection:'CONNECTIONS'
+                    connection:'CONNECTIONS',
+                    'gear boost':'GEAR BOOSTS',
+                    'fighting style':"FIGHTING STYLES",
+                    'magic hack':'MAGIC HACKS',
+                    revelation:'REVELATIONS',
+                    exploit:'EXPLOITS',
+                    specialization:'SPECIALIZATIONS',
+                    trick:'TRICKS'
                 };
                 list_converter = _.reduce(_.keys(data.pageData.blobs),(memo,key)=>{
                     let blob = data.pageData.blobs[key];
