[WOIN] Luck pool correction
Removed Luck pool rebuild on sheet open to preserve used pool between sessions.

--- a/WOIN/WOIN.html
+++ b/WOIN/WOIN.html
@@ -1904,7 +1904,7 @@ on("change:charisma change:charisma_rank change:maximum_dice_pool sheet:opened",
     });
 });
 // Creating luck Dice Pool
-on("change:luck_rank sheet:opened", function() {
+on("change:luck_rank", function() {
     getAttrs(["luck_rank"], function(values) {
 
         if (values.luck_rank == 0) {
