add logos to Starfinder Mancer uc-619

--- a/Starfinder by Roll20/Starfinder.html
+++ b/Starfinder by Roll20/Starfinder.html
@@ -8207,6 +8207,11 @@ Charmancer overall slide template
 </charmancer>
 -->
 <charmancer class="sheet-repeating-topbar">
+    <div class="logo-row">
+        <img alt="Starfindr logo" src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Starfinder%20by%20Roll20/Assets/starfinder_1000x200.png" />
+        <img alt="Charactermancer logo with a wizard hat, hammer, and wand" src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Starfinder%20by%20Roll20/Assets/mancerpng.png" />
+        <img alt="Roll20 logo of d20" src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Starfinder%20by%20Roll20/Assets/Roll20.png" />
+    </div>
     <div class='charmancerrow sheet-attributes-row'>
         <div class='attribute-container'>
             <span class='strength sheet-attribute-value'>10</span>
