fix skills display uc-619

--- a/Starfinder by Roll20/Starfinder.html
+++ b/Starfinder by Roll20/Starfinder.html
@@ -9184,7 +9184,9 @@ Charmancer overall slide template
                 <button type="submit" class="mancernav-button" value="summary-slide">Apply Changes</button>
             </div>
             <div class='section'>
-                <button type="submit" value="pc-equipment">Next</button>
+                <!-- Commenting out until UC-491 -->
+                <!--<button type="submit" value="pc-equipment">Next</button>-->
+                <button type="submit" value="pc-feat">Next</button>
             </div>
         </div>
     </div>
@@ -9214,7 +9216,8 @@ Charmancer overall slide template
                 <button type="submit" class="mancernav-button" value="summary-slide">Apply Changes</button>
             </div>
             <div class='section'>
-                <button type="submit" value="pc-equipment">Next</button>
+                <!-- Commenting out until UC-491 -->
+                <!--<button type="submit" value="pc-equipment">Next</button>-->
             </div>
         </div>
     </div>
@@ -9270,7 +9273,8 @@ Charmancer overall slide template
                 <button type="cancel" value="example" data-i18n="cancel">Cancel</button>
             </div>
             <div class='section'>
-                <button type="finish" value="update">Update Existing Character</button>
+                <!-- Disabling this button per UC-619 -->
+                <button type="finish" value="update" disabled>Update Existing Character (Coming soon)</button>
             </div>
         </div>
     </div>
@@ -9489,7 +9493,7 @@ Charmancer overall slide template
             info: logInfo,
             notice: logNotice,
             log: logLog
-        };
+        }; 
     }());
 
     /* ---- END: TheAaronSheet.js ---- */
@@ -19252,7 +19256,7 @@ Charmancer overall slide template
             }
             setObj.skill_points_available = _.reduce(data.repeatIDs,(memo,id)=>{
                 if(/repeating_.+?_class/.test(id)){
-                    memo += (data.mancerData[`${id}_skill_points`]*1||0) + data.mancerData.intelligence_mod;
+                    memo += (data.mancerData[`${id}_skill_points`]*1||0) + parseInt(data.mancerData.intelligence_mod);
                 }
                 return memo;
             },0);
