BTATOW Add rollable button to skills.

--- a/BattleTech-A-Time-of-War/BattleTech-A-Time-of-War.html
+++ b/BattleTech-A-Time-of-War/BattleTech-A-Time-of-War.html
@@ -460,6 +460,7 @@
         <span class="skills skills-modifier">Mod</span>
         <span class="skills skills-tnc">TN/C</span>
         <span class="skills skills-xp">XP</span>
+        <span class="skills skill-roll"></span>
     </div>
     <fieldset class="repeating_skills">
         <div class="skills-container">
@@ -562,7 +563,6 @@
                 <option value="zero_g_operations">Zero-G Operations</option>
             </select>
             <input type="text" name="attr_sub_skill" class="skills skill content" title="@{repeating_skills_$id_sub_skill}">
-            <button type="roll" name="roll_skill_check" value="@{skill_roll_value}" class="skill-roll" title="@{repeating_skills_$id_skill_check}">
                 <span name="attr_skill_level" class="skills content skills-labels skills-skill-level" title="@{repeating_skills_$id_skill_level}"></span>
                 <input type="hidden" name="attr_skill_level">
                 <span name="attr_skill_linked_attributes" class="skills content skills-labels skills-linked-attributes" title="@{repeating_skills_$id_skill_linked_attributes}"></span>
@@ -572,10 +572,12 @@
                 <span name="attr_skill_tnc" class="skills content skills-labels skills-tnc" title="@{repeating_skills_$id_skill_tnc}"></span>
                 <input type="hidden" name="attr_skill_tnc">
                 <input type="hidden" name="attr_target_number">
-            </button>
             <input type="number" name="attr_skill_xp" class="skills content skills-labels skills-xp" title="@{repeating_skills_$id_skill_xp}">
             <input type="hidden" name="attr_skill_roll_value" value="Acrobatics/Free-Fall Skill Check
                                         Margin of Success: [[2d6 + @{skill_modifier}[MOD] - @{target_number}[TN]]]">
+            <span class="skills skills-labels">
+                <button type="roll" name="roll_skill_check" value="@{skill_roll_value}" class="skill-roll skills-labels d6" title="@{repeating_skills_$id_skill_check}">l</button>
+            </span>
         </div>
     </fieldset>
 </div>
