--- a/WOIN/WOIN.html
+++ b/WOIN/WOIN.html
@@ -475,7 +475,7 @@
                             <th></th>
                         </tr>
                         <tr>
-                            <td><button type="roll" class="sheet-rollskill" name="roll_Armor" value="&{template:default} {{name= @{Armor_name} }} {{soak= @{Armor_soak} }} {{inneffective= @{Armor_Inneffective} }} {{notes= @{Armor_notes} }}"></button></td>
+                            <td><button type="roll" class="sheet-rollskill" name="roll_Armor" value="&{template:default} {{name= @{Armor_name} }} {{soak= @{Armor_soak} }} {{ineffective= @{Armor_ineffective} }} {{notes= @{Armor_notes} }}"></button></td>
                             <td><input type="text" class="sheet-text3" name="attr_Armor_name" value="" placeholder="Armor Name"/></td>
                             <td><input type="number" class="sheet-number2" name="attr_Armor_soak" value="0" /></td>
                                 <td>
@@ -487,7 +487,7 @@
                                     </select>
                                 </td>
                             <td><input type="number" class="sheet-number2" name="attr_Armor_weight" value="0" /></td>
-                            <td><input type="text" class="sheet-text3" name="attr_Armor_Inneffective" value="" placeholder="Blunt, Heat, Electricity"/></td>
+                            <td><input type="text" class="sheet-text3" name="attr_Armor_Ineffective" value="" placeholder="Blunt, Heat, Electricity"/></td>
                             <th><input type="checkbox" class="sheet-box" name="attr_Armor_open" value="1"/><span></span></th>
                         </tr>
                     </table>
@@ -509,11 +509,11 @@
                             <th>Soak</th>
                             <th>Type</th>
                             <th>Weight</th>
-                            <th>Inneffective</th>
+                            <th>Ineffective</th>
                             <th></th>
                         </tr>
                         <tr>
-                            <td><button type="roll" class="sheet-rollskillold" name="roll_Armor" value="&{template:default} {{name= @{Armor_name} }} {{soak= @{Armor_soak} }} {{inneffective= @{Armor_Inneffective} }} {{notes= @{Armor_notes} }}"></button></td>
+                            <td><button type="roll" class="sheet-rollskillold" name="roll_Armor" value="&{template:default} {{name= @{Armor_name} }} {{soak= @{Armor_soak} }} {{inneffective= @{Armor_Ineffective} }} {{notes= @{Armor_notes} }}"></button></td>
                             <td><input type="text" class="sheet-text3" name="attr_Armor_name" value="" placeholder="Armor Name"/></td>
                             <td><input type="number" class="sheet-number2" name="attr_Armor_soak" value="0" /></td>
                                 <td>
@@ -525,7 +525,7 @@
                                     </select>
                                 </td>
                             <td><input type="number" class="sheet-number2" name="attr_Armor_weight" value="0" /></td>
-                            <td><input type="text" class="sheet-text3" name="attr_Armor_Inneffective" value="" placeholder="Blunt, Heat, Electricity"/></td>
+                            <td><input type="text" class="sheet-text3" name="attr_Armor_Ineffective" value="" placeholder="Blunt, Heat, Electricity"/></td>
                             <th><input type="checkbox" class="sheet-box" name="attr_Armor_open" value="1"/><span></span></th>
                         </tr>
                     </table>
@@ -551,15 +551,15 @@
                             <th></th>
                             <th>Weapon</th>
                             <th>Attack Attribute</th>
-                            <th>Attack Mod.</th>
-                            <th>Damage</th>
-                            <th>Damage Mod.</th>
-<th>Damage Add.</th>
+                            <th>Skill</th>
+                            <th>Dmg</th>
+							<th>Dmg Add.</th>
+                            <th>Dmg Mod.</th>
                             <th>Range</th>
                             <th></th>
                         </tr>
                         <tr>
-                            <td><button type="roll" class="sheet-rollskill" name="roll_weapon1" value="&{template:default} {{name= @{weapon1_name} }} {{range= @{weapon1_range} }} {{attack= [[ (@{weaponattrib1_select} + @{weapon1_skill})d6]] }} {{damage= [[(@{weapon1_damage} + @{weapon1_damagemod})d6 + @{weapon1_damageadd} ]] }}"></button></td>
+                            <td><button type="roll" class="sheet-rollskill" name="roll_weapon1" value="&{template:default} {{name= @{weapon1_name} }} {{range= @{weapon1_range} }} {{attack= [[ (@{weaponattrib1_select} + @{weapon1_skill} - @{weapon1_damagemod}*2)d6]] }} {{damage= [[(@{weapon1_damage} + @{weapon1_damagemod})d6 + @{weapon1_damageadd} ]] }}"></button></td>
                             <td><input type="text" class="sheet-text3" name="attr_weapon1_name" value="" placeholder="Weapon Name"/></td>
                             <td>
                                 <select class="sheet-select1" name="attr_weaponattrib1_select">
@@ -578,8 +578,8 @@
                             </td>
                             <td><input type="number" class="sheet-number2" style="width:80px;" name="attr_weapon1_skill" value="0" /></td>
                             <td><input type="number" class="sheet-number2" name="attr_weapon1_damage" value="0" /></td>
+							<td><input type="number" class="sheet-number2" style="width:80px;" name="attr_weapon1_damageadd" value="0" /></td>
                             <td><input type="number" class="sheet-number2" style="width:80px;" name="attr_weapon1_damagemod" value="0" /></td>
-<td><input type="number" class="sheet-number2" style="width:80px;" name="attr_weapon1_damageadd" value="0" /></td>
                             <td><input type="number" class="sheet-number2" name="attr_weapon1_range" value="0" /></td>
                             <th><input type="checkbox" class="sheet-box" name="attr_weapon1_open" value="1"/><span></span></th>
                         </tr>
@@ -600,15 +600,15 @@
                             <th></th>
                             <th>Weapon</th>
                             <th>Attack Attribute</th>
-                            <th>Attack Mod.</th>
-                            <th>Damage</th>
-                            <th>Damage Mod.</th>
-		<th>Damage Add.</th>
+                            <th>Skill</th>
+                            <th>Dmg</th>
+							<th>Dmg Add.</th>
+                            <th>Dmg Mod.</th>
                             <th>Range</th>
                             <th></th>
                         </tr>
                         <tr>
-                            <td><button type="roll" class="sheet-rollskillold" name="roll_weapon1" value="&{template:default} {{name= @{weapon1_name} }} {{range= @{weapon1_range} }} {{attack= [[ (@{weaponattrib1_select} + @{weapon1_skill})d6]] }} {{damage= [[(@{weapon1_damage} + @{weapon1_damagemod})d6 + @{weapon1_damageadd}]] }}"></button></td>
+                            <td><button type="roll" class="sheet-rollskillold" name="roll_weapon1" value="&{template:default} {{name= @{weapon1_name} }} {{range= @{weapon1_range} }} {{attack= [[ (@{weaponattrib1_select} + @{weapon1_skill} - @{weapon1_damagemod}*2)d6]] }} {{damage= [[(@{weapon1_damage} + @{weapon1_damagemod})d6 + @{weapon1_damageadd}]] }}"></button></td>
                             <td><input type="text" class="sheet-text3" name="attr_weapon1_name" value="" placeholder="Weapon Name"/></td>
                             <td>
                                 <select class="sheet-select1" name="attr_weaponattrib1_select">
@@ -627,8 +627,8 @@
                             </td>
                             <td><input type="number" class="sheet-number2" style="width:80px;" name="attr_weapon1_skill" value="0" /></td>
                             <td><input type="number" class="sheet-number2" name="attr_weapon1_damage" value="0" /></td>
-                            <td><input type="number" class="sheet-number2" style="width:80px;" name="attr_weapon1_damagemod" value="0" /></td>
-<td><input type="number" class="sheet-number2" style="width:80px;" name="attr_weapon1_damageadd" value="0" /></td>
+							<td><input type="number" class="sheet-number2" style="width:80px;" name="attr_weapon1_damageadd" value="0" /></td>
+							<td><input type="number" class="sheet-number2" style="width:80px;" name="attr_weapon1_damagemod" value="0" /></td>
                             <td><input type="number" class="sheet-number2" name="attr_weapon1_range" value="0" /></td>
                             <th><input type="checkbox" class="sheet-box" name="attr_weapon1_open" value="1"/><span></span></th>
                         </tr>
