--- a/Call_of_Cthulhu_7th_Ed/coc_7th_ed.html
+++ b/Call_of_Cthulhu_7th_Ed/coc_7th_ed.html
@@ -33,14 +33,17 @@
 	<div style="text-align:left"><b>Additional Options:</b></div>
 	    <div>
 	        <input type="checkbox" class="sheet-toggledr" name="attr_toggledr" value="1">Common Dice Rolls
-	        <input type="checkbox" class="sheet-togglearmor" name="attr_togglearmor" value="1">Armor
+	    </div>
+	    <div>
+	        <input type="checkbox" class="sheet-togglesimplearmor" name="attr_togglesimplearmor" value="1">Simple Armor
+	        <input type="checkbox" class="sheet-togglearmor" name="attr_togglearmor" value="1">Fragmented Armor
 	    </div>
 	    <div>
 	        <input type="checkbox" class="sheet-togglecompanions" name="attr_togglecompanions" value="1">NPCs(Companions,Mounts,etc)
 	        <input type="checkbox" class="sheet-togglevehicles" name="attr_togglevehicles" value="1">Vehicles
 	    </div>
 	    <div>
-	        <input type="checkbox" class="sheet-hide" name="attr_sheet-hide">Hide Sheet
+	        <input type="checkbox" class="sheet-hide" name="attr_sheet-hide">Show Only NPCs, Vehicles, Common Dice Rolls and Pulp Talents
 	    </div>
     </div>
 </div>
@@ -3741,7 +3744,8 @@
     <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="6">
     <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="4">
     <input type="checkbox" style="display:none" class="sheet-hide" name="attr_sheet-hide">
-    <h4 class="section-head" data-i18n="combat-u">Combat</h4>
+    <h4 class="section-head" data-i18n="combat-u">Combat
+    </h4>
     <input type="checkbox" style="display:none" class="sheet-hide" name="attr_sheet-hide">
     <div class="section">
 
@@ -3750,17 +3754,20 @@
     <div class="sheet-skills7">
         <table style="width:100%">
             <thead>
-                <th data-i18n="shield-z">Shield</th>
+                <th style="width:30%" data-i18n="shield-z">Shield</th>
+                <th style="width:15%" data-i18n="defence-u">Defense</th>
+                <th style="width:55%"></th>
             </thead>
         </table>
         <table style="width:100%">
             <tr>
-                <input style="width:30%" type="text" name="attr_shield_type_and_name_inv" data-i18n-placeholder="shield-z" placeholder="Shield" />
-                <input style="width:15%" type="text" name="attr_shield_defence_inv" data-i18n-placeholder="defence-u" placeholder="Defence" />
+                <input style="width:30%;text-align:center" type="text" name="attr_shield_type_and_name_inv" data-i18n-placeholder="shield-z" placeholder="Shield" />
+                <input style="width:15%;text-align:center" type="text" name="attr_shield_defence_inv" data-i18n-placeholder="defence-u" placeholder="Defence" />
 				<button class='old-roll' type='roll' value='&{template:coc-defence} {{name=@{shield_type_and_name_inv}}} {{success=[[@{shield_inv}]]}} {{hard=[[floor(@{shield_inv}/2)]]}} {{extreme=[[floor(@{shield_inv}/5)]]}} {{roll1=[[1d100]]}} {{roll2=[[1d100]]}} {{roll3=[[1d100]]}} {{defence=[[@{shield_defence_inv}]]}}' name='roll_shield_defence_inv_check' />
 				<button class='new-roll' type='roll' value='&{template:coc-defence-1} {{name=@{shield_type_and_name_inv}}} {{success=[[@{shield_inv}]]}} {{hard=[[floor(@{shield_inv}/2)]]}} {{extreme=[[floor(@{shield_inv}/5)]]}} {{roll1=[[1d100]]}} {{defence=[[@{shield_defence_inv}]]}}' name='roll_shield_defence_inv_check' />
             </tr>
         </table>
+        <hr>
         <table style="width:100%">
             <thead>
                 <th style="width:18%" data-i18n="weaponname-u">Weapon</th>
@@ -3874,17 +3881,20 @@
     <div class="sheet-skills1">
         <table style="width:100%">
             <thead>
-                <th data-i18n="shield-z">Shield</th>
+                <th style="width:30%" data-i18n="shield-z">Shield</th>
+                <th style="width:15%" data-i18n="defence-u">Defense</th>
+                <th style="width:55%"></th>
             </thead>
         </table>
         <table style="width:100%">
             <tr>
-                <input style="width:30%" type="text" name="attr_shield_type_and_name_da" data-i18n-placeholder="shield-z" placeholder="Shield" />
-                <input style="width:15%" type="text" name="attr_shield_defence_da" data-i18n-placeholder="defence-u" placeholder="Defence" />
+                <input style="width:30%;text-align:center" type="text" name="attr_shield_type_and_name_da" data-i18n-placeholder="shield-z" placeholder="Shield" />
+                <input style="width:15%;text-align:center" type="text" name="attr_shield_defence_da" data-i18n-placeholder="defence-u" placeholder="Defence" />
 				<button class='old-roll' type='roll' value='&{template:coc-defence} {{name=@{shield_type_and_name_da}}} {{success=[[@{shield_da}]]}} {{hard=[[floor(@{shield_da}/2)]]}} {{extreme=[[floor(@{shield_da}/5)]]}} {{roll1=[[1d100]]}} {{roll2=[[1d100]]}} {{roll3=[[1d100]]}} {{defence=[[@{shield_defence_da}]]}}' name='roll_shield_defence_da_check' />
 				<button class='new-roll' type='roll' value='&{template:coc-defence-1} {{name=@{shield_type_and_name_da}}} {{success=[[@{shield_da}]]}} {{hard=[[floor(@{shield_da}/2)]]}} {{extreme=[[floor(@{shield_da}/5)]]}} {{roll1=[[1d100]]}} {{defence=[[@{shield_defence_da}]]}}' name='roll_shield_defence_da_check' />
             </tr>
         </table>
+        <hr>
         <table style="width:100%">
             <thead>
                 <th style="width:18%" data-i18n="weaponname-u">Weapon</th>
@@ -4634,11 +4644,39 @@
         </fieldset>
     </div>
         
-<!------------------------- Armor ------------------------->
+<!------------------------- Simple Armor ------------------------->
+        <input type="checkbox" style="display:none" class="sheet-togglesimplearmor" name="attr_togglesimplearmor" value="1">
+        <div class="sheet-simplearmorsection">
+        <div class="sheet-simplearmor">
+            <hr>
+            <table style="width:100%">
+                <thead>
+                <th style="width:30%;text-align:left" data-i18n="armor-z">Armor</th>
+                <th style="width:15%;text-align:left" data-i18n="defence-u">Defense</th>
+                <th style="width:55%"></th>
+                </thead>
+            </table>
+        <table style="width:100%">
+            <tr>
+                <input style="width:30%;text-align:center" type="text" name="attr_head_simplearmor" data-i18n-placeholder="head-u" placeholder="Head"/>
+                <input style="width:15%;text-align:center" type="text" name="attr_head_simplearmordefence" data-i18n-placeholder="defence-u" placeholder="Defence" />
+                <button class='dice-roll' type='roll' value='&{template:coc-defence-2} {{name=@{head_simplearmor}}} {{defence=[[@{head_simplearmordefence}]]}}' name='roll_head_simplearmor_defence' />
+            </tr>
+        </table>
+        <table>
+            <tr>
+                <input style="width:30%;text-align:center" type="text" name="attr_body_simplearmor" data-i18n-placeholder="body-u" placeholder="Body"/>
+                <input style="width:15%;text-align:center" type="text" name="attr_body_simplearmordefence" data-i18n-placeholder="defence-u" placeholder="Defence"/>
+                <button class='dice-roll' type='roll' value='&{template:coc-defence-2} {{name=@{body_simplearmor}}} {{defence=[[@{body_simplearmordefence}]]}}' name='roll_body_simplearmor_defence' />
+            </tr>
+        </table>
+        </div>
+        </div>
+<!------------------------- Fragmented Armor ------------------------->
         <input type="checkbox" style="display:none" class="sheet-togglearmor" name="attr_togglearmor" value="1">
         <div class="sheet-armorsection">
-        <hr></hr>
         <div class="sheet-armor">
+            <hr>
             <table style="width:100%;text-align:center">
                 <td><b>Armor</b></td>
             </table>
@@ -4650,7 +4688,7 @@
                 <td><span data-i18n="head-u">Head</span></td>
                 <td><input class="narrow-input" style="width:57%" type="text" name="attr_head_armor" data-i18n-placeholder="item-u" placeholder="Item"/>
                     <input class="narrow-input" style="width:25%" type="text" name="attr_head_armordefence" data-i18n-placeholder="defence-u" placeholder="Defence" />
-                    <button class='smallbutton-roll' type='roll' value='&{template:coc-defence-2} {{name=@{head_armor}}} {{defence=[[@{head_armordefence}]]}}' name='roll_head_armor_defence' /></td>
+                    <button class='smallnonskillbutton-roll' type='roll' value='&{template:coc-defence-2} {{name=@{head_armor}}} {{defence=[[@{head_armordefence}]]}}' name='roll_head_armor_defence' /></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -4659,38 +4697,38 @@
                 <td><span data-i18n="l_arm-u">L.Arm</span></td>
                 <td><input class="narrow-input" style="width:57%" type="text" name="attr_l_arm_armor" data-i18n-placeholder="item-u" placeholder="Item"/>
                     <input class="narrow-input" style="width:25%" type="text" name="attr_l_arm_armordefence" data-i18n-placeholder="defence-u" placeholder="Defence"/>
-                    <button class='smallbutton-roll' type='roll' value='&{template:coc-defence-2} {{name=@{l_arm_armor}}} {{defence=[[@{l_arm_armordefence}]]}}' name='roll_l_arm_armor_defence' /></td>
+                    <button class='smallnonskillbutton-roll' type='roll' value='&{template:coc-defence-2} {{name=@{l_arm_armor}}} {{defence=[[@{l_arm_armordefence}]]}}' name='roll_l_arm_armor_defence' /></td>
                 <td></td>
                 <td><span data-i18n="chest-u">Chest</span></td>
                 <td><input class="narrow-input" style="width:57%" type="text" name="attr_chest_armor" data-i18n-placeholder="item-u" placeholder="Item"/>
                     <input class="narrow-input" style="width:25%" type="text" name="attr_chest_armordefence" data-i18n-placeholder="defence-u" placeholder="Defence"/>
-                    <button class='smallbutton-roll' type='roll' value='&{template:coc-defence-2} {{name=@{chest_armor}}} {{defence=[[@{chest_armordefence}]]}}' name='roll_chest_armor_defence' /></td>
+                    <button class='smallnonskillbutton-roll' type='roll' value='&{template:coc-defence-2} {{name=@{chest_armor}}} {{defence=[[@{chest_armordefence}]]}}' name='roll_chest_armor_defence' /></td>
                 <td></td>
                 <td><span data-i18n="r_arm-u">R.Arm</span></td>
                 <td><input class="narrow-input" style="width:57%" type="text" name="attr_r_arm_armor" data-i18n-placeholder="item-u" placeholder="Item"/>
                     <input class="narrow-input" style="width:25%" type="text" name="attr_r_arm_armordefence" data-i18n-placeholder="defence-u" placeholder="Defence"/>
-                    <button class='smallbutton-roll' type='roll' value='&{template:coc-defence-2} {{name=@{r_arm_armor}}} {{defence=[[@{r_arm_armordefence}]]}}' name='roll_r_arm_armor_defence' /></td>
+                    <button class='smallnonskillbutton-roll' type='roll' value='&{template:coc-defence-2} {{name=@{r_arm_armor}}} {{defence=[[@{r_arm_armordefence}]]}}' name='roll_r_arm_armor_defence' /></td>
             </tr>
             <tr>
                 <td><span data-i18n="l_leg-u">L.Leg</span></td>
                 <td><input class="narrow-input" style="width:57%" type="text" name="attr_l_leg_armor" data-i18n-placeholder="item-u" placeholder="Item"/>
                     <input class="narrow-input" style="width:25%" type="text" name="attr_l_leg_armordefence" data-i18n-placeholder="defence-u" placeholder="Defence"/>
-                    <button class='smallbutton-roll' type='roll' value='&{template:coc-defence-2} {{name=@{l_leg_armor}}} {{defence=[[@{l_leg_armordefence}]]}}' name='roll_l_leg_armor_defence' /></td>
+                    <button class='smallnonskillbutton-roll' type='roll' value='&{template:coc-defence-2} {{name=@{l_leg_armor}}} {{defence=[[@{l_leg_armordefence}]]}}' name='roll_l_leg_armor_defence' /></td>
                 <td></td>
                 <td><span data-i18n="abdmn-u">Abdmn</span></td>
                 <td><input class="narrow-input" style="width:57%" type="text" name="attr_abdmn_armor" data-i18n-placeholder="item-u" placeholder="Item"/>
                     <input class="narrow-input" style="width:25%" type="text" name="attr_abdmn_armordefence" data-i18n-placeholder="defence-u" placeholder="Defence"/>
-                    <button class='smallbutton-roll' type='roll' value='&{template:coc-defence-2} {{name=@{abdmn_armor}}} {{defence=[[@{abdmn_armordefence}]]}}' name='roll_abdmn_armor_defence' /></td>
+                    <button class='smallnonskillbutton-roll' type='roll' value='&{template:coc-defence-2} {{name=@{abdmn_armor}}} {{defence=[[@{abdmn_armordefence}]]}}' name='roll_abdmn_armor_defence' /></td>
                 <td></td>
                 <td><span data-i18n="r_leg-u">R.Leg</span></td>
                 <td><input class="narrow-input" style="width:57%" type="text" name="attr_r_leg_armor" data-i18n-placeholder="item-u" placeholder="Item"/>
                     <input class="narrow-input" style="width:25%" type="text" name="attr_r_leg_armordefence" data-i18n-placeholder="defence-u" placeholder="Defence"/>
-                    <button class='smallbutton-roll' type='roll' value='&{template:coc-defence-2} {{name=@{r_leg_armor}}} {{defence=[[@{r_leg_armordefence}]]}}' name='roll_r_leg_armor_defence' /></td>
+                    <button class='smallnonskillbutton-roll' type='roll' value='&{template:coc-defence-2} {{name=@{r_leg_armor}}} {{defence=[[@{r_leg_armordefence}]]}}' name='roll_r_leg_armor_defence' /></td>
             </tr>
         </table>
         <div style="width:99%;text-align:center">
                 <span data-i18n="body-hit-location" style="font-weight:bold">Body Hit Location</span>
-                <button class='smallbutton-roll' type='roll' value='&{template:coc-body-hit-loc} {{roll1=[[1D20]]}}' name='roll_body_hit_loc' />
+                <button class='smallnonskillbutton-roll' type='roll' value='&{template:coc-body-hit-loc} {{roll1=[[1D20]]}}' name='roll_body_hit_loc' />
         </div>
         </div>
         </div>
@@ -4715,7 +4753,8 @@
 		        <div class="sheet-row">
 		            <div>
                         <input type="text" name="attr_minion_name" style="width:35%;font-weight:bold;text-align:center" data-i18n-placeholder="name-u" placeholder="Name"/>
-                        <input class="narrow-input" style="width:8%;text-align:center" type="text" name="attr_minion_san_roll" data-i18n-placeholder="san-u" placeholder="SAN"/>
+                        <span style="font-size:85%" data-i18n="san-u"><b>SAN</b></span>
+                        <input class="narrow-input" style="width:4.5%;text-align:center" type="text" name="attr_minion_san_roll"/>
 		                <span><button class='smallbutton-roll' type='roll' value='&{template:coc-1} {{name=@{minion_name} Rolling SAN}} {{success=[[@{minion_san_roll}]]}} {{hard=[[floor(@{minion_san_roll}/2)]]}} {{extreme=[[floor(@{minion_san_roll}/5)]]}} {{roll1=[[1d100]]}}' name='roll_minion_san_roll_check' /></span>
 		            </div>
 		        </div>
@@ -4734,7 +4773,7 @@
 			            <div>
                             <span style="font-size:80%" data-i18n="armor-z"><b>Armor</b></span>
                             <input class="narrow-input" style="width:37%" type="text" name="attr_minionarmor" />
-                            <span><button class='smallbutton-roll' type='roll' value='&{template:coc-miniondef} {{name=@{minion_name} Armor}} {{defence=[[@{minionarmor}]]}}' name='roll_minionarmor' /></span>
+                            <span><button class='evensmallerbutton-roll' type='roll' value='&{template:coc-miniondef} {{name=@{minion_name} Armor}} {{defence=[[@{minionarmor}]]}}' name='roll_minionarmor' /></span>
 			            </div>
 			            <div>
                             <span style="font-size:80%" data-i18n="MOV-u"><b>MOV</b></span>
@@ -4856,7 +4895,7 @@
                         <span><button class='smallbutton-roll' type='roll' value='&{template:coc-minionattack} {{name=@{minion_name} Attacking with @{minionweapon3}}} {{success=[[@{minionskill8}]]}} {{hard=[[floor(@{minionskill8}/2)]]}} {{extreme=[[floor(@{minionskill8}/5)]]}} {{roll1=[[1d100]]}} {{damage=[[@{miniondamage3}]]}}' name='roll_miniondamage3' /></span>
 		            </div>
 		        </div>
-	            <hr>
+	            <hr></hr>
 		    </fieldset>       
 		</div>
 		</div>
@@ -4897,7 +4936,7 @@
 			            <div>
                             <span style="font-size:80%" data-i18n="armor-z"><b>Armor</b></span>
                             <input class="narrow-input" style="width:37%" type="text" name="attr_vehiclearmor" />
-                            <span><button class='smallbutton-roll' type='roll' value='&{template:coc-miniondef} {{name=@{vehicle_name} Armor}} {{defence=[[@{vehiclearmor}]]}}' name='roll_vehiclearmor' /></span>
+                            <span><button class='evensmallerbutton-roll' type='roll' value='&{template:coc-miniondef} {{name=@{vehicle_name} Armor}} {{defence=[[@{vehiclearmor}]]}}' name='roll_vehiclearmor' /></span>
 			            </div>
 			            <div>
                             <span style="font-size:80%" data-i18n="MOV-u"><b>MOV</b></span>
@@ -4914,7 +4953,7 @@
 		                <textarea name="attr_vehicle_stats_info_3" style="width:95%;height:55px;font-size:90%"></textarea>
 			        </div>
 	            </div>
-	            <hr>
+	            <hr></hr>
 		    </fieldset>       
 		</div>
 		</div>
@@ -5006,6 +5045,9 @@
         </div>
     </div>
 </div>
+
+<!------------------------- Downtime ------------------------->
+
 
 <input type="hidden" name="attr_str_txt" value="STR ROLL"/>
 <input type="hidden" name="attr_dex_txt" value="DEX ROLL"/>
