--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -3712,7 +3712,23 @@
 
 	<p>Pull Request: 07/09/2019</p>
 
-	   
+	<ul>
+		<li>Changes, Fixes, and Adds made by Mike W (UserID: 1414610)</li>
+		<li>Fixed wording from roll table to roll template. (Cosmetic Only)</li>
+		<li>Fixed Spell Macro roll to include Modifier, if any.</li>
+		<li>Fixed the Spell Effective Skill level to include the Spell MOD, if any</li>
+		<li>Fixed columns for MOD, Pts, Duration, and Maintains. (Cosmetic Only)</li>
+		<li>Reordered column layout to match GURPS Magic format. (Cosmetic Only)</li>
+		<li>Added the attributes for Class and Resisted By for the Grimoire.</li>
+		<li>Fixed Spells ‘Based On’ header to show the attribute chosen. (Cosmetic Only)</li>
+		<li>Reduced the attribute size for Diff, MOD and Pts and increased size for Cost and Time. (Cosmetic Only)</li>
+		<li>Added the attributes for Latest Changes date. (Cosmetic Only)</li>
+		<li>Added the attributes for College and Modifier Notes for the Grimoire.</li>
+		<li>Added Attributes Misc and Modifier Notes for Skills. </li>
+		<li>Fixed Inventory totals for Value and Weight totals to show trailing zeros.</li>
+		<li>Fixed issue with Inventory Total Weight not rounding properly and not showing to 3 decimal places.</li>
+		<li>Made some format changes for Total Value and Total Weight under Inventory. (Cosmetic Only)</li>
+	</ul>
 	   
 	<h4>Version 1.6.0</h4>
 	
