Adds new Roll Templates for Mecha Weapons
* Allows for creating a macro for rolling mecha weapon attacks in an easy to identify format

--- a/Mekton Z/Mekton Zeta.html
+++ b/Mekton Z/Mekton Zeta.html
@@ -3718,7 +3718,6 @@
                 <td style="width:40px"><input type="number" class="sheet-table_input" style="width:40px" name="attr_mecha-Shields_1_Cost"/></td>
                 <td class="sheet-thickright"><input type="text" class="sheet-table_input" style="width:100%" name="attr_mecha-Shields_1_Notes"/></td>
             </tr>
-
             <tr>
                 <td class="sheet-thickleft" style="width:60px" ><input type="text" class="sheet-table_input" style="width:60px" name="attr_mecha-Shields_2_Location"/></td>
                 <td style="width:60px" ><input type="text" class="sheet-table_input" style="width:60px" name="attr_mecha-Shields_2_Class"/></td>
@@ -3988,8 +3987,6 @@
                 <td class="sheet-thickright "><input type="text" class="sheet-table_input" style="width:80px" name="attr_mecha-Remotes_weapon_5_Notes"/></td>
             </tr>
         </table>
-
-
     </div>
 </div>
 <!--Tab 10 Command Armor, Boosterpacks, and Droptanks-->
@@ -4168,7 +4165,7 @@
 
 <!--Roll Templates-->
 <div class="sheet-hidden">
-    <!-- Skill-general-->
+    <!-- skill-general-->
     <rolltemplate class="sheet-rolltemplate-skill-general">
         <table class="sheet-skill-general">
             <tr>
@@ -4179,7 +4176,7 @@
             </tr>
             <tr>
                 <td style="padding-left:10px" ><i>Range</i></td>
-                <td class="sheet-no_border">{{range}}meters</td>
+                <td class="sheet-no_border">{{range}} meters</td>
             </tr>
             <tr>
                 <td><span class="sheet-tcat"><b>Attack:</b> </span> </td>
@@ -4192,6 +4189,108 @@
             <tr>
                 <td><span class="sheet-tcat"><b>Hit Location:</b> </span>
                 <td>{{hit-location}}</td>
+            </tr>
+        </table>
+    </rolltemplate>
+    <!-- mecha-projectile-weapon -->
+    <rolltemplate class="sheet-rolltemplate-projectile-mecha-weapon">
+        <table class="sheet-projectile-mecha-weapon">
+            <tr>
+                <th colspan="2">{{weapon}}</th>
+            </tr>
+            <tr>
+                <td colspan="2"><i><b>{{character}}</b> fires the {{weapon}}</i></td>
+            </tr>
+            <tr>
+                <td class="sheet-tcat"><b>Attack:</b></td>
+                <td>{{attack}}</td>
+            </tr>
+            <tr>
+                <td class="sheet-tcat"><b>Hit Location:</b></td>
+                <td>{{hit-location}}</td>
+            </tr>
+            <tr>
+                <td class="sheet-tcat"><b>Range:</b></td>
+                <td class="sheet-no_border">{{range}} meters</td>
+            </tr>
+            <tr>
+                <td class="sheet-tcat"><b>Damage:</b></td>
+                <td>{{damage}} Kills</td>
+            </tr>
+            <tr>
+                <td class="sheet-tcat"><b>Burst Value:</b></td>
+                <td>{{bv}}</td>
+            </tr>
+            <tr>
+                <td class="sheet-tcat"><b>Ammo Type:</b></td>
+                <td>{{ammo}}</td>
+            </tr>
+            <tr>
+                <td class="sheet-tcat"><b>Firing Mode:</b></td>
+                <td>{{target}}</td>
+            </tr>    
+            <tr>
+                <td<span class="sheet-description" colspan="2"><i>{{desc}}</i></td>
+            </tr>
+        </table>
+    </rolltemplate>
+    <!-- melee-mecha-weapon -->
+    <rolltemplate class="sheet-rolltemplate-melee-mecha-weapon">
+        <table class="sheet-melee-mecha-weapon">
+            <tr>
+                <th colspan="2">{{weapon}}</th>
+            </tr>
+            <tr>
+                <td colspan="2"><i><b>{{character}}</b> attacks with the {{weapon}}</i></td>
+            </tr>
+            <tr>
+                <td class="sheet-tcat"><b>Attack:</b></td>
+                <td>{{attack}}</td>
+            </tr>
+            <tr>
+                <td class="sheet-tcat"><b>Hit Location:</b></td>
+                <td>{{hit-location}}</td>
+            </tr>
+            <tr>
+                <td class="sheet-tcat"><b>Damage:</b></td>
+                <td>{{damage}} Kills</td>
+            </tr>
+            <tr>
+                <td class="sheet-tcat"><b>Armour-Piercing:</b></td>
+                <td>{{ap}} SP</td>
+            </tr>
+            <tr>
+                <td<span class="sheet-description" colspan="2"><i>{{desc}}</i></td>
+            </tr>
+        </table>
+    </rolltemplate>
+    <!-- quick-mecha-weapon -->
+    <rolltemplate class="sheet-rolltemplate-quick-mecha-weapon">
+        <table class="sheet-quick-mecha-weapon">
+            <tr>
+                <th colspan="3">{{weapon}}</th>
+            </tr>
+            <tr>
+                <td colspan="3"><i><b>{{character}}</b> attacks with the {{weapon}}</i></td>
+            </tr>
+            <tr>
+                <td class="sheet-tcat"><b>Attacks:</b></td>
+                <td>{{attack-1}}</td><td>{{attack-2}}</td>
+            </tr>
+            <tr>
+                <td class="sheet-tcat"><b>Hit Locations:</b></td>
+                <td>{{hit-location-1}}</td><td>{{hit-location-2}}</td>
+            </tr>
+            <tr>
+                <td class="sheet-tcat"><b>Damage:</b></td>
+                <td colspan="2">{{damage}} Kills</td>
+            </tr>
+            <tr>
+                <td class="sheet-tcat"><b>Armour-Piercing:</b></td>
+                <td colspan="2">{{ap}} SP</td>
+            </tr>
+            <tr>
+                <td class="sheet-description" colspan="3"><i>{{desc}}</i></td>
             </tr>
         </table>
     </rolltemplate>
